--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ mvc:
    iex:
       getAllSymbolsPath: /iex/symbols
       getLastTradedPricePath: /iex/lastTradedPrice
+      getHistoricalPricesPath: /iex/historicalPrices
    max-size-trace-payload: 50000
 jms:
    listener-concurrency: 1-5
@@ -47,6 +48,7 @@ spring:
    rest:
       # this points at the local WireMock server in the test environment.
       iexBasePath: http://localhost:${wiremock.server.port}/
+      iexBasePathTokenNeeded: http://localhost:${wiremock.server.port}/
 
 ---
 # Dev properties go here
@@ -57,6 +59,8 @@ spring:
       password:
    rest:
       iexBasePath: https://api.iextrading.com/1.0
+      # new URL path, need token for HTTP request
+      iexBasePathTokenNeeded: https://cloud.iexapis.com/stable
 # set debug to get spring to log the classpath (and other things) on startup
 debug: true
 
