add API support of query by date

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 			**/Application.java
 		</sonar.coverage.exclusions>
 		<!-- Allow us to skip Unit Tests only, if need be, with -Dskip.surefire.tests, but retain the skip all tests functionality of -DskipTests -->
+		<!--suppress UnresolvedMavenProperty -->
 		<skip.surefire.tests>${skipTests}</skip.surefire.tests>
 	</properties>
 
