--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
       hibernate:
          ddl-auto: update
       database-platform: org.hibernate.dialect.MySQL5Dialect
+   h2:
+      console:
+         enabled: true
+         path: /h2
 
 mvc:
    settleMissionPath: /settlementEngine
